# c-monkey

./: .travis.yml  CMakeLists.txt  README.md  conanfile.py
lib/: guesser  guesser.monkey  prelude  prelude.monkey  test
src/: CMakeLists.txt  main.cpp
src/ast/: CMakeLists.txt  ast.cpp  ast.hpp
src/common/: CMakeLists.txt  token.cpp  token.hpp
src/evaluator/: CMakeLists.txt  bag.cpp  bag.hpp  builtin.cpp  builtin.hpp  env.cpp  env.hpp  eval.cpp  eval.hpp  eval_errors.hpp  output.hpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
src/parser/: CMakeLists.txt  ast.cpp  ast.hpp  identifier.hpp  let_statement.hpp  node.hpp  parser.cpp  parser.hpp  parser_errors.hpp  print_dispatcher.hpp  program.hpp
src/repl/: CMakeLists.txt  repl.cpp  repl.hpp
src/token/: CMakeLists.txt  token.cpp  token.hpp
tests/: CMakeLists.txt  eval.cpp  lexer.cpp  mem.cpp  parser.cpp  test_eval_helpers.hpp  test_helpers.hpp  test_parser_helpers.hpp
tools/: Dockerfile.valgrind  c-monkey.sublime-syntax
